[gd_scene load_steps=29 format=3 uid="uid://qj5wm2wpuawj"]

[ext_resource type="Script" path="res://effects/explosion.gd" id="1_dmlp3"]
[ext_resource type="AudioStream" uid="uid://4icv5wfjnole" path="res://assets/audio/Hanna-Barbera SFX/bomb_1.wav" id="2_byo7q"]
[ext_resource type="Material" uid="uid://boon6b1dc8ryq" path="res://effects/explosion_debris_material_3d.tres" id="3_1vq0b"]
[ext_resource type="Script" path="res://effects/car_game_particles.gd" id="4_51gev"]
[ext_resource type="Material" uid="uid://do7exkbb35ahw" path="res://effects/explosion_process_material.tres" id="6_6jk3p"]
[ext_resource type="Material" uid="uid://mdbhqpypnp1l" path="res://effects/explosion_cloud_material.tres" id="6_6y1oc"]

[sub_resource type="SphereMesh" id="SphereMesh_44s0b"]
radius = 1.0
height = 2.0
radial_segments = 16
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dy22p"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.164706)

[sub_resource type="SphereShape3D" id="SphereShape3D_yj2xt"]
radius = 1.0

[sub_resource type="Curve" id="Curve_8ci4k"]
_data = [Vector2(0.02, 1), 0.0, 0.0, 0, 0, Vector2(0.493333, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_legbc"]
curve = SubResource("Curve_8ci4k")

[sub_resource type="Curve" id="Curve_c7kii"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.501114, 1), 0.0, 0.0, 0, 0, Vector2(0.750557, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3x0cj"]
curve = SubResource("Curve_c7kii")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bby8d"]
particle_flag_align_y = true
spread = 180.0
radial_velocity_min = 30.0
radial_velocity_max = 80.0
radial_velocity_curve = SubResource("CurveTexture_legbc")
scale_min = 0.5
scale_max = 1.5
scale_curve = SubResource("CurveTexture_3x0cj")
collision_mode = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_ru2ja"]
material = ExtResource("3_1vq0b")
top_radius = 0.1
bottom_radius = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_wrirc"]

[sub_resource type="Curve" id="Curve_p7xv7"]
_data = [Vector2(0.00581396, 0), 0.0, 0.0, 0, 0, Vector2(0.502907, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ehpt2"]
curve = SubResource("Curve_p7xv7")

[sub_resource type="Gradient" id="Gradient_p6ew1"]
offsets = PackedFloat32Array(0.25, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iie0n"]
gradient = SubResource("Gradient_p6ew1")

[sub_resource type="Curve" id="Curve_sbah3"]
max_value = 20.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.497093, 20), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_nj67e"]
curve = SubResource("Curve_sbah3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ls8r0"]
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_nj67e")
color_ramp = SubResource("GradientTexture1D_iie0n")
alpha_curve = SubResource("CurveTexture_ehpt2")

[sub_resource type="SphereMesh" id="SphereMesh_svcfy"]

[sub_resource type="PlaneMesh" id="PlaneMesh_yfpra"]
size = Vector2(50, 50)

[sub_resource type="Animation" id="Animation_ao72s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionEmitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DebrisEmitter:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplosionArea:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplosionArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplosionArea:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BlastwaveEmitter:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mns0o"]
resource_name = "explode"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OmniLight3D:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 16.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ExplosionEmitter:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DebrisEmitter:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ExplosionArea:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.01, 0.01, 0.01), Vector3(20, 20, 20), Vector3(0.01, 0.01, 0.01)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplosionArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplosionArea:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BlastwaveEmitter:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_372yq"]
_data = {
"RESET": SubResource("Animation_ao72s"),
"explode": SubResource("Animation_mns0o")
}

[node name="Explosion" type="Node3D"]
script = ExtResource("1_dmlp3")

[node name="ExplosionArea" type="Area3D" parent="."]
collision_layer = 1048576
collision_mask = 270925906
monitoring = false
monitorable = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExplosionArea"]
visible = false
mesh = SubResource("SphereMesh_44s0b")
surface_material_override/0 = SubResource("StandardMaterial3D_dy22p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionArea"]
shape = SubResource("SphereShape3D_yj2xt")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_byo7q")

[node name="DebrisEmitter" type="GPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 24
lifetime = 0.6
one_shot = true
explosiveness = 1.0
fixed_fps = 60
collision_base_size = 0.1
visibility_aabb = AABB(-40, -40, -40, 80, 80, 80)
process_material = SubResource("ParticleProcessMaterial_bby8d")
draw_pass_1 = SubResource("CylinderMesh_ru2ja")
script = ExtResource("4_51gev")

[node name="ExplosionEmitter" type="GPUParticles3D" parent="."]
material_override = ExtResource("6_6y1oc")
emitting = false
amount = 12
lifetime = 4.0
one_shot = true
explosiveness = 0.9
fixed_fps = 60
collision_base_size = 1.0
visibility_aabb = AABB(-10, -10, -10, 20, 20, 20)
process_material = ExtResource("6_6jk3p")
draw_pass_1 = SubResource("SphereMesh_wrirc")
script = ExtResource("4_51gev")

[node name="BlastwaveEmitter" type="GPUParticles3D" parent="."]
material_override = ExtResource("6_6y1oc")
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_ls8r0")
draw_pass_1 = SubResource("SphereMesh_svcfy")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.983673, 0.470967, 1.34766e-06, 1)
light_energy = 0.0
omni_range = 10.0

[node name="TestFloor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
visible = false
mesh = SubResource("PlaneMesh_yfpra")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_372yq")
}
